RESOLVED FIXED300933
REGRESSION(visionOS 26): interaction-region/overlay.html started failing
https://bugs.webkit.org/show_bug.cgi?id=300933
Summary REGRESSION(visionOS 26): interaction-region/overlay.html started failing
Jonathan Bedard
Reported 2025-10-16 15:04:28 PDT
interaction-region/overlay.html started failing on visionOS 26. --- /Volumes/Data/worker/visionOS-26-Simulator-WK2-Tests-EWS/build/layout-test-results/interaction-region/overlay-expected.txt +++ /Volumes/Data/worker/visionOS-26-Simulator-WK2-Tests-EWS/build/layout-test-results/interaction-region/overlay-actual.txt @@ -16,42 +16,57 @@ ) (children 3 (GraphicsLayer - (position 0.00 400.00) - (preserves3D 1) + (bounds 800.00 600.00) (children 1 (GraphicsLayer - (bounds 200.00 200.00) - (contentsOpaque 1) - (drawsContent 1) - (event region - (rect (0,0) width=200 height=200) + (position 0.00 400.00) + (preserves3D 1) + (children 1 + (GraphicsLayer + (bounds 200.00 200.00) + (contentsOpaque 1) + (drawsContent 1) + (event region + (rect (0,0) width=200 height=200) + ) + ) ) ) ) ) (GraphicsLayer - (position 600.00 400.00) - (preserves3D 1) + (bounds 800.00 600.00) (children 1 (GraphicsLayer - (bounds 200.00 200.00) - (contentsOpaque 1) - (drawsContent 1) - (event region - (rect (0,0) width=200 height=200) + (position 600.00 400.00) + (preserves3D 1) + (children 1 + (GraphicsLayer + (bounds 200.00 200.00) + (contentsOpaque 1) + (drawsContent 1) + (event region + (rect (0,0) width=200 height=200) + ) + ) ) ) ) ) (GraphicsLayer - (position 600.00 0.00) - (preserves3D 1) + (bounds 800.00 600.00) (children 1 (GraphicsLayer - (bounds 200.00 200.00) - (contentsOpaque 1) - (event region - (rect (0,0) width=200 height=200) + (position 600.00 0.00) + (preserves3D 1) + (children 1 + (GraphicsLayer + (bounds 200.00 200.00) + (contentsOpaque 1) + (event region + (rect (0,0) width=200 height=200) + ) + ) ) ) )
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-16 15:04:42 PDT
Jonathan Bedard
Comment 2 2025-10-16 15:51:17 PDT
EWS
Comment 3 2025-10-16 15:54:16 PDT
Test gardening commit 301666@main (680b98fb545f): <https://commits.webkit.org/301666@main> Reviewed commits have been landed. Closing PR #52517 and removing active labels.
Etienne
Comment 4 2025-11-24 09:35:56 PST
Etienne
Comment 5 2025-11-28 11:56:46 PST
EWS
Comment 6 2025-12-01 00:32:52 PST
Committed 303667@main (11225ff10391): <https://commits.webkit.org/303667@main> Reviewed commits have been landed. Closing PR #54561 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.