REGRESSION(visionOS 26): interaction-region/overlay.html started failing https://bugs.webkit.org/show_bug.cgi?id=300933 <rdar://162809925>

Reviewed by NOBODY (OOPS!).

Rebase the `interaction-region` Layout Tests for visionOS 26.
Scope CA Layer Tree based tests to a layer to avoid capturing details
unrelated to the tests.

* LayoutTests/interaction-region/form-control-refresh/date-native-interaction-region-expected.txt:
* LayoutTests/interaction-region/guard-crash-expected.txt:
* LayoutTests/interaction-region/guard-crash.html:
* LayoutTests/interaction-region/interaction-layers-culling-expected.txt:
* LayoutTests/interaction-region/interaction-layers-culling-layer-type-change-expected.txt:
* LayoutTests/interaction-region/interaction-layers-culling-layer-type-change.html:
* LayoutTests/interaction-region/interaction-layers-culling.html:
* LayoutTests/interaction-region/layer-tree-expected.txt:
* LayoutTests/interaction-region/layer-tree-shape-reset-expected.txt:
* LayoutTests/interaction-region/layer-tree-shape-reset.html:
* LayoutTests/interaction-region/layer-tree.html:
* LayoutTests/interaction-region/overlay.html:
* LayoutTests/platform/visionos/TestExpectations:
* LayoutTests/resources/ui-helper.js:
(window.UIHelper.getCALayerTreeForCompositedElement):
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:
* Source/WebKit/UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[WKWebView _caLayerTreeAsTextForLayerWithID:]):
(-[WKWebView _caLayerTreeAsTextForLayer:]):
(-[WKWebView _caLayerTreeAsText]):
* Tools/TestRunnerShared/UIScriptContext/Bindings/UIScriptController.idl:
* Tools/TestRunnerShared/UIScriptContext/UIScriptController.h:
(WTR::UIScriptController::caLayerTreeAsTextForLayerWithID const):
* Tools/WebKitTestRunner/cocoa/UIScriptControllerCocoa.h:
* Tools/WebKitTestRunner/cocoa/UIScriptControllerCocoa.mm:
(WTR::UIScriptControllerCocoa::caLayerTreeAsTextForLayerWithID const):